Also change the Window frame to dark or light using fxthemes library