@@ -10,13 +10,15 @@ javafx {
 
 application {
     applicationDefaultJvmArgs =  [
-            "--add-opens=javafx.controls/javafx.scene.control.skin=com.pixelduke.fxskins"
+            "--add-opens=javafx.controls/javafx.scene.control.skin=com.pixelduke.fxskins",
+            "--add-opens=javafx.graphics/javafx.stage=com.pixelduke.fxthemes",
+            "--add-exports=javafx.graphics/com.sun.javafx.tk.quantum=com.pixelduke.fxthemes"
     ]
 
     mainModule = 'com.pixelduke.samples.transit'
 
     /* Controls that have cells */
-//    mainClass.set('com.pixelduke.samples.transit.TableViewSample')
+    mainClass.set('com.pixelduke.samples.transit.TableViewSample')
 //    mainClassName = 'com.pixelduke.samples.transit.TreeTableViewSample'
 //    mainClassName = 'com.pixelduke.samples.transit.TreeViewSample'
     //mainClass.set('com.pixelduke.samples.transit.TreeTableViewWithSubheaders')
@@ -38,7 +40,7 @@ application {
     //mainClass.set('com.pixelduke.samples.transit.MDL2IconFontSample')
 
 //    mainClassName = 'com.pixelduke.samples.transit.ControlsSample'
-    mainClass = 'com.pixelduke.samples.transit.themetester.ThemeTester'
+//    mainClass = 'com.pixelduke.samples.transit.themetester.ThemeTester'
 
 //    mainClassName = 'com.pixelduke.samples.transit.DatePickerAlignmentTestSample'
 
